sticky status no longer out of place below 800px wide

--- a/sass/_archives.scss
+++ b/sass/_archives.scss
@@ -62,8 +62,10 @@
   margin-bottom: $baseline-height * 1.5;
 }
 .has-post-thumbnail {
-  position: relative;
 
+  article {
+    position: relative;
+  }
   .sticky-status {
     position: absolute;
     top: 0;
